# telemetry-board

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.api  Dockerfile.worker  LICENSE  Makefile  README.md  alembic.ini  deploy.sh  dev.db  docker-compose.yml  plan.md  pre-commit-config.yaml  pyproject.toml  sitecustomize.py
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_asset_alert_params.py
app/: __init__.py  db.py  main.py  metrics.py  ui.py
app/api/: alerts.py  assets.py  prices.py
app/models/: __init__.py  alert.py  asset.py  price_history.py
app/static/: README.txt
app/templates/: alerts.html  asset.html  base.html  overview.html
docs/: DIAGRAMS.md  OPERATIONS.md  PRESENTATION.md
ops/: compose.prometheus-auth.yml  compose.tunnel.yml  prometheus.yml
ops/cloudflared/: config.yml
ops/prometheus/: web.yml
stubs/pytest/: __init__.pyi
stubs/requests/: __init__.pyi
telemetry_board.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_alerts.py  test_alerts_compute.py  test_alerts_metrics.py  test_api_integration.py  test_assets.py  test_health.py  test_metrics.py  test_mock_seed.py  test_prices.py  test_prices_summary.py  test_retention.py  test_retention_task.py  test_ui.py  test_ui_smoke.py  test_worker_errors.py  test_worker_fetch.py  test_worker_fetch_backoff.py  test_worker_schedule.py
worker/: __init__.py  schedule.py  worker_app.py
worker/tasks/: alerts.py  seed.py  (+2 more)
